--- a/wp-content/themes/motherjones/scss/_homepage.scss
+++ b/wp-content/themes/motherjones/scss/_homepage.scss
@@ -141,7 +141,9 @@
 		}
 	}
 }
-
+#homepage-more-stories-sidebar {
+	padding-right: 0;
+}
 .homepage-fullwidth {
 	.section-label {
 		display: inline-block;
